🔄Update: remodelacion de varios archivos

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 </div>
 
                 <button id="btn-ir-inicio" class="btn-juego">Empieza la lucha</button>
+
+           <div>
+              <p id="tr" class="tr">500</p>  <img  id="bolsa" class="bolsa"  src="./img/monedero.png"> 
             </div>
         </section>
 
@@ -131,9 +134,60 @@
                 <h1>Fin de los Juegos</h1>
                 <h2 id="rango-final">Calculando...</h2>
                 <p>Puntuación Final: <span id="puntuacion-final">0</span></p>
-                <button id="btn-reiniciar" class="btn-juego">Nueva Partida</button>
+                <button id="btn-ranking" class="btn-juego">Ir al Ranking</button>
             </div>
         </section>
+
+     <section id="escena-ranking" class="escena oculta">
+            <div class="tarjeta-ranking">
+                <h1>BIENVENIDO AL Ranking</h1>
+                <div class="avatar-container">
+                    
+                </div>
+               
+                <table>
+                    <th>Nombre</th>
+                    <td>Apuleyo Diocles</td>
+
+                    <th>Puntuación</th>
+                    <td>678</td>
+
+                    <th>Monedas Totales</th>
+                    <td>56</td>
+
+                </table>
+
+                <table>
+                    <th>Nombre</th>
+                    <td>Romeus</td>
+
+                    <th>Puntuación</th>
+                    <td>234</td>
+
+                    <th>Monedas Totales</th>
+                    <td>22</td>
+
+                </table>
+
+                   <table>
+                    <th>Nombre</th>
+                    <td>Apolo</td>
+
+                    <th>Puntuación</th>
+                    <td>980</td>
+
+                    <th>Monedas Totales</th>
+                    <td>235</td>
+
+                </table>
+
+
+                <button id="btn-reiniciar" class="btn-juego">Reiniciar</button>
+            </div>
+        </section>
+
+
+
 
     </main>
 
