--- a/index.html
+++ b/index.html
@@ -113,22 +113,37 @@
             <button id="btn-siguiente-batalla" class="btn-juego oculta">Siguiente Enemigo</button>
         </section>
 
-        <section id="escena-fin" class="escena oculta">
+     <section id="escena-fin" class="escena oculta">
             <div class="tarjeta-resultado">
                 <h1>Fin de los Juegos</h1>
                 <h2 id="rango-final">Calculando...</h2>
-                <p>Puntos: <span id="resumen-puntos">0</span></p>
-                <p>Monedas: <span id="resumen-monedas">0</span></p>
-                <p style="font-weight:bold; font-size:1.2em; border-top:1px solid gold;">Total Final: <span id="puntuacion-final">0</span></p>
-                <button id="btn-ranking" class="btn-juego">Ir al Ranking</button>
+                <p>Puntos de Batalla: <span id="resumen-puntos">0</span></p>
+                <p>Monedas Restantes: <span id="resumen-monedas">0</span></p>
+                <p style="font-weight:bold; font-size:1.2em; border-top:1px solid gold; padding-top:10px;">
+                    Puntuación Total: <span id="puntuacion-final">0</span>
+                </p>
+                <button id="btn-ir-ranking-escena" class="btn-juego">Ir al Ranking</button>
             </div>
         </section>
         
         <section id="escena-ranking" class="escena oculta">
-            <div class="tarjeta-ranking">
-                <h1>Ranking</h1>
-                <p style="color:white;">Revisa la consola (F12) para ver la tabla.</p>
-                <button id="btn-reiniciar" class="btn-juego">Reiniciar</button>
+            <div class="tarjeta-ranking" style="max-height: 80vh; overflow-y: auto; padding: 20px;">
+                <h1>HALL DE LA FAMA</h1>
+                <table id="tabla-ranking-html" style="width:100%; color:white; border-collapse: collapse; margin-bottom: 20px;">
+                    <thead>
+                        <tr style="border-bottom: 2px solid gold;">
+                            <th style="padding:10px;">Nombre</th>
+                            <th>Puntos</th>
+                            <th>Monedas</th>
+                            <th>TOTAL</th>
+                        </tr>
+                    </thead>
+                    <tbody id="cuerpo-ranking">
+                        </tbody>
+                </table>
+                <button id="btn-mostrar-terminal" class="btn-juego" style="background-color: #444; margin-bottom: 10px;">Mostrar en terminal</button>
+                <br>
+                <button id="btn-reiniciar" class="btn-juego">Reiniciar Juego</button>
             </div>
         </section>
     </main>
