--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aventura en el Coliseo: Gladiadores</title>
+    <title>AventuraJSRomana</title>
     <link rel="stylesheet" href="style.css">
     
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
@@ -11,10 +11,15 @@
 </head>
 <body>
 
+    <header id="layout-header">
+        <h1 class="titulo-juego">AVENTURA EN EL COLISEO ROMANO</h1>
+    </header>
+
     <main id="app-container">
+
         <section id="escena-crear" class="escena visible">
             <div class="tarjeta-crear">
-                <h1>CREA TU PERSONAJE</h1>
+                <h1>CREA TU GLADIADOR</h1>
                 <div class="avatar-container">
                     <img id="img-jugador-inicio" src="img/Gladiador.png" alt="Avatar Jugador">
                 </div>
@@ -25,10 +30,10 @@
                     <span id="error-nombre"></span>
 
                     <label for="ataque">Ataque:</label>
-                    <input type="number" name="ataque" value="0">
+                    <input type="number" name="ataque" value="0" min="0">
 
                     <label for="defensa">Defensa:</label>
-                    <input type="number" name="defensa" value="0">
+                    <input type="number" name="defensa" value="0" min="0">
 
                     <label for="vida">Vida:</label>
                     <input type="number" name="vida" value="100">
@@ -60,15 +65,10 @@
 
         <section id="escena-mercado" class="escena oculta">
             <header class="mercado-header">
-                <h2>Armería LUSITANIA</h2>
-                <div class="inventario-resumen">
-                    Dinero: <span id="gasto-total">500</span> €
-                </div>
+                <h2>ARMERIA LUSITANIA</h2>
             </header>
             <div id="contenedor-productos" class="grid-productos"></div>
             <footer class="mercado-footer">
-                <h3>Tu Inventario Actual</h3>
-                <div id="contenedor-inventario" class="grid-inventario"></div>
                 <button id="btn-mercado-continuar" class="btn-juego">Ir a la Arena</button>
             </footer>
         </section>
@@ -127,34 +127,48 @@
             </div>
         </section>
 
-    <section id="escena-ranking" class="escena oculta">
-    <div class="tarjeta-ranking">
-        <h1>RANKING</h1>
-        <div class="tabla-scroll-container">
-            <table id="tabla-ranking-html">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Puntos</th>
-                        <th>Monedas</th>
-                        <th>TOTAL</th>
-                    </tr>
-                </thead>
-                <tbody id="cuerpo-ranking">
-                    </tbody>
-            </table>
-        </div>
-        <button id="btn-mostrar-terminal" class="btn-juego">Mostrar en terminal</button>
-        <button id="btn-reiniciar" class="btn-juego">Reiniciar</button>
-    </div>
-</section>
+        <section id="escena-ranking" class="escena oculta">
+            <div class="tarjeta-ranking">
+                <h1>RANKING</h1>
+                <div class="tabla-scroll-container">
+                    <table id="tabla-ranking-html">
+                        <thead>
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Puntos</th>
+                                <th>Monedas</th>
+                                <th>TOTAL</th>
+                            </tr>
+                        </thead>
+                        <tbody id="cuerpo-ranking"></tbody>
+                    </table>
+                </div>
+                <button id="btn-mostrar-terminal" class="btn-juego">Mostrar en terminal</button>
+                <button id="btn-reiniciar" class="btn-juego">Reiniciar Juego</button>
+            </div>
+        </section>
 
     </main>
 
-<footer id="footer-monedero" class="contenedor-monedero">
-    <p id="tr" class="cantidad-dinero">500</p> 
-    <img src="img/monedero.png" alt="bolsa" class="img-monedero">
-</footer>
 
+    <footer id="layout-footer">
+        
+        <div id="footer-monedero" class="contenedor-monedero">
+            <p id="tr" class="cantidad-dinero">500</p> 
+            <img src="img/monedero.png" alt="bolsa" id="bolsa" class="img-monedero">
+        </div>
+
+        <div class="inventario-global-footer">
+            <h3>INVENTARIO</h3>
+            <div id="contenedor-slots" class="grid-slots">
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
