Defensa de Diseño

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 <body>
 
     <header id="layout-header">
+
+        <div id="contenedor-star" class="grid-star">
+
+        <div class="star1"></div>
+        <div class="star2"></div>
+        <div class="star3"></div>
+        <div class="star4"></div>
+        <div class="star5"></div>
+        </div>
+
         <h1 class="titulo-juego">AVENTURA EN EL COLISEO ROMANO</h1>
+
+        
     </header>
 
     <main id="app-container">
@@ -167,6 +179,12 @@
                 <div class="slot"></div>
                 <div class="slot"></div>
                 <div class="slot"></div>
+            </div>
+
+            <div id="pista">
+                <h2 id="texto-pista">TOP SECRET</h2>
+
+                <p>Para ganar la partida, debes confiar en ti</p>
             </div>
         </div>
     </footer>
